<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <include app:graph="@navigation/activity_login_graph"/>

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.messagechat.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" >
        <action
            android:id="@+id/action_nav_home_to_nav_gallery"
            app:destination="@id/nav_gallery"
            app:enterAnim="@anim/slide_left"
            app:exitAnim="@anim/wait_anim"
            app:popEnterAnim="@anim/wait_anim"
            app:popExitAnim="@anim/slide_right"/>
        <action
            android:id="@+id/action_nav_home_to_login_graph"
            app:destination="@id/activity_login_graph"
            app:enterAnim="@anim/slide_left"
            app:exitAnim="@anim/wait_anim"
            app:popEnterAnim="@anim/wait_anim"
            app:popExitAnim="@anim/slide_right"/>
    </fragment>

    <fragment
        android:id="@+id/nav_gallery"
        android:name="com.example.messagechat.ui.gallery.GalleryFragment"
        android:label="@string/menu_gallery"
        tools:layout="@layout/fragment_gallery" />

    <fragment
        android:id="@+id/nav_slideshow"
        android:name="com.example.messagechat.ui.slideshow.SlideshowFragment"
        android:label="@string/menu_slideshow"
        tools:layout="@layout/fragment_slideshow" />

    <!-- <fragment
        android:id="@+id/loginFragment"
        android:name="com.example.messagechat.ui.login.LoginFragment"
        android:label="Login"
        tools:layout="@layout/fragment_login" /> -->

    <!-- <activity
        android:id="@+id/loginActivity"
        android:name="com.example.messagechat.ui.login.LoginActivity"
        android:label="LoginActivity"
        tools:layout="@layout/activity_login"/> -->
</navigation>